# jobtracker

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  STYLE.md
scripts/: build_debug.sh  build_release.sh
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  command_line.cpp  command_line.h  main.cpp
src/core/: CMakeLists.txt  application.cpp  application.h  job_tracker.cpp  job_tracker.h  statistics.h
src/import/: CMakeLists.txt  csv_import_source.cpp  csv_import_source.h  email_client.h  email_message.h  http_client.cpp  http_client.h  imap_email_client.h  imap_import_source.cpp  imap_import_source.h  import_service.cpp  import_service.h  import_source.h  remote_csv_import_source.cpp  remote_csv_import_source.h
src/storage/: CMakeLists.txt  application_repository.h  sqlite_application_repository.cpp  sqlite_application_repository.h  sqlite_database.cpp  sqlite_database.h
src/util/: date_time.cpp  date_time.h  string_utils.cpp  string_utils.h
tests/: CMakeLists.txt  test_skeleton.cpp
tests/cli/: test_command_line.cpp
tests/core/: fake_application_repository.h  test_job_tracker.cpp
tests/import/: fake_email_client.h  fake_http_client.h  fake_import_source.h  test_csv_import_source.cpp  test_imap_import_source.cpp  test_import_service.cpp  test_remote_csv_import_source.cpp
tests/storage/: test_sqlite_repository.cpp
tests/util/: test_date_time.cpp  test_string_utils.cpp
